# ecom_backend

./: .env  LICENSE  pyproject.toml
ecom/: settings.py  urls.py
ecom_backend/: asgi.py  settings.py  wsgi.py
render/: admin.py  models.py  serializers.py  views.py
render/migrations/: 0001_initial.py  0002_transaction.py  0003_categories_alter_product_category.py
render/urls/: orders_url.py  products_url.py  transaction_url.py  users_url.py
staticfiles/: staticfiles.json
